--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Vue App</title>
-  <link href="/about.js" rel="prefetch"><link href="/vendors~about.js" rel="prefetch"><link href="/main.js" rel="preload" as="script"></head>
-  <body>
-    <div id="app"></div>
-  <script type="text/javascript" src="/main.js"></script></body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><title>Vue App</title><link href=/cedar-icons/css/about.45393185.css rel=prefetch><link href=/cedar-icons/js/about.92b9f308.js rel=prefetch><link href=/cedar-icons/css/chunk-vendors.5863a2e5.css rel=preload as=style><link href=/cedar-icons/css/main.ffac2e64.css rel=preload as=style><link href=/cedar-icons/js/chunk-vendors.b286f221.js rel=preload as=script><link href=/cedar-icons/js/main.f5513f58.js rel=preload as=script><link href=/cedar-icons/css/chunk-vendors.5863a2e5.css rel=stylesheet><link href=/cedar-icons/css/main.ffac2e64.css rel=stylesheet></head><body><div id=app></div><script src=/cedar-icons/js/chunk-vendors.b286f221.js></script><script src=/cedar-icons/js/main.f5513f58.js></script></body></html>
